syntax = "proto3";

option csharp_namespace = "Sep3DataTier";
option java_multiple_files = true;
option java_package = "via.sep3.logic.protobuf.report";

message ReportFilter {
}

message ReportList {
  repeated ReportObject reports = 1;
}

message ReportObject {
  string id = 1;
  string date = 2;
  string time = 3;
  bytes proof = 4;
  string description = 5;
  string status = 6;
  LocationObject location = 7;
  UserObject user = 8;
}

message UserObject
{
  string id = 1;
  string username = 2;
}

message LocationObject {
  double latitude = 1;
  double longitude = 2;
  int32 size = 3;
}

message CreateReportObject
{
  string date = 1;
  string time = 2;
  bytes proof = 3;
  string description = 4;
  string status = 5;
  LocationObject location = 6;
  string creatorId= 7;
}

service Report {
  rpc GetReports(ReportFilter) returns (ReportList);
  rpc CreateReport(CreateReportObject) returns (ReportObject);
}